--- a/tsos.css
+++ b/tsos.css
@@ -46,3 +46,12 @@ h3 {
   font-size: 8pt;
   text-align: center;
 }
+
+
+#divConsole {
+    width: 500px;
+    height: 300px;
+    float: left;
+    overflow: auto;  /*Scroll Bar*/
+}
+
