--- a/tsos.css
+++ b/tsos.css
@@ -61,19 +61,27 @@ h3 {
   flex: 1; /* Expands I think */
 }
 
+#divMemoryTable {
+  margin-top: 20px;
+}
+
 #memorytable {
   border-collapse: collapse;
   width: 100%;
- 
+  border: 2px solid #333;
 }
 
-#memorytable th, #divmemorytable td {
-  border: 1px solid #dddddd;
+#memorytable th, #memorytable td {
+  border: 1px solid #666;
+  padding: 8px;
   text-align: left;
-  border: 1px solid #dddddd;
 }
 
-#memorytable tr:nth-child(even) {
-  background-color: #f2f2f2;
+#memorytable tr:hover {
+  background-color: #ddd;
 }
 
+#divMemoryTable h5 {
+  text-align: center;
+  margin-bottom: 10px;
+}
