--- a/tsos.css
+++ b/tsos.css
@@ -85,3 +85,28 @@ h3 {
   text-align: center;
   margin-bottom: 10px;
 }
+
+/*Process Table */
+
+#processTable {
+    background-color: lightgrey;
+    width: 300px;
+    border: 15px solid green;
+    padding: 50px;
+    margin: 20px;
+  }
+
+
+#processTable th, #processTable td {
+  border: 1px solid #888;      
+  padding: 8px;                  
+  text-align: left;              
+}
+
+#divprocessTable h5{
+  background-color: #eee;    
+  text-align: center;
+  margin-bottom: 10px;  
+}
+
+
