--- a/tsos.css
+++ b/tsos.css
@@ -41,14 +41,6 @@ h3 {
   width: 100px;
 }
 
-.footerText {
-  color: black;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 8pt;
-  text-align: center;
-}
-
-
 
 
 #consoleContent {
@@ -59,13 +51,27 @@ h3 {
 
 
 #memorytable th, #memorytable td {
-  border: 1px solid #666;
-  padding: 8px;
-  text-align: left;
+  border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
 }
 
+#memorytable th {
+  background-color: #e0e0e0;
+  font-weight: bold;
+}
+
+#memorytable tr {
+  background-color: #444;
+}
+
+#memorytable td {
+  color: #0f0; 
+}
+
+
 #memorytable tr:hover {
-  background-color: #f6ff00;
+  background-color: #555; 
 }
 
 #pcbtable {
@@ -101,4 +107,39 @@ h3 {
   resize: none;
 }
 
+#divCPUTable {
+  font-family: Arial, sans-serif;
+}
+
+#cputable {
+  border-collapse: collapse;
+  width: 100%;
+  background-color: #f4f4f4;
+}
+
+#cputable th, #cputable td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: center;
+}
+
+#cputable th {
+  background-color: #e0e0e0;
+  font-weight: bold;
+}
+
+#cputablebody tr {
+  background-color: #444;
+}
+
+#cputablebody td {
+  font-family: 'Courier New', Courier, monospace; 
+  color: #0f0; 
+  font-weight: bold;
+  font-size: 16px;
+}
+
+#cputablebody td:hover {
+  background-color: #555; 
+}
 
